<resources>
    <string name="app_name">NewsMe</string>


    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="url_01net">http://www.01net.com/rss/info/flux-rss/flux-toutes-les-actualites/</string>
    <string name="url_lemonde">http://www.lemonde.fr/rss/une.xml</string>
    <string name="url_bfm">http://www.bfmtv.com/rss/info/flux-rss/flux-toutes-les-actualites/</string>
    <string name="url_20mn">http://www.20minutes.fr/rss/flux/une.xml?xts=290428-xtor=RSS-1</string>

    <string name="BFM">BFM</string>
    <string name="net">01-NET</string>
    <string name="minuite">20-MINUTES</string>
    <string name="lemonde">Le monde</string>
    <string name="identifiant">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="create_acount">Créer un compte</string>
    <string name="login">Connexion</string>
    <string name="first_login">Première connexion ?</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="Email">Email</string>
    <string name="conf_password">Confirmation</string>
    <string name="valider">Valider</string>
    <string name="field_empty_error">Veillez remplir tous les champs</string>
    <string name="password_error">les champs mot de passe et confirmation ne correspondent pas</string>
    <string name="bad_login_error">Votre identifiant ou mot passe est incorrect! Veuillez recommencer.</string>
    <string name="email_used">Cette adresse email est déjà utilisée !</string>


</resources>
